@@ -7,16 +7,14 @@ import com.studycoAchl.hackaton.entity.Problem;
 import com.studycoAchl.hackaton.repository.ProblemRepository;
 import com.studycoAchl.hackaton.service.ProblemSessionService;
 import com.studycoAchl.hackaton.service.ProblemGenerationService;
+import com.studycoAchl.hackaton.service.GradingService;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.Arrays;
-import java.util.Map;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 
 @RestController
 @RequestMapping("/api/problem-session")
@@ -27,6 +25,7 @@ public class ProblemSessionController {
     private final ProblemSessionService sessionService;
     private final ProblemGenerationService problemGenerationService;
     private final ProblemRepository problemRepository;
+    private final GradingService gradingService;
 
     /**
      * 채팅 세션 기반 AI 문제 생성 및 세션 시작
@@ -101,6 +100,144 @@ public class ProblemSessionController {
     }
 
     /**
+     * 현재 문제 조회 - problemUuid 기반으로 변경
+     */
+    @GetMapping("/problem/{problemUuid}/current")
+    public ResponseEntity<ApiResponse<CurrentQuestionResponse>> getCurrentQuestion(
+            @PathVariable UUID problemUuid) {
+
+        try {
+            log.info("현재 문제 조회 요청 - problemUuid: {}", problemUuid);
+
+            CurrentQuestionResponse response = sessionService.getCurrentQuestion(problemUuid);
+
+            log.info("현재 문제 조회 성공 - questionId: {}", response.getQuestionId());
+
+            return ResponseEntity.ok(ApiResponse.success(response, "현재 문제를 성공적으로 가져왔습니다."));
+
+        } catch (Exception e) {
+            log.error("현재 문제 조회 실패 - problemUuid: {}", problemUuid, e);
+            return ResponseEntity.ok(ApiResponse.error("문제 조회 실패: " + e.getMessage()));
+        }
+    }
+
+    /**
+     * 답안 제출 및 채점 - 채점 시스템 통합
+     */
+    @PostMapping("/problem/{problemUuid}/submit")
+    public ResponseEntity<ApiResponse<Map<String, Object>>> submitAnswer(
+            @PathVariable UUID problemUuid,
+            @RequestParam int questionNumber,
+            @RequestParam int selectedAnswer,
+            @RequestParam UUID userUuid) {
+
+        try {
+            log.info("답안 제출 및 채점 - problemUuid: {}, questionNumber: {}, selectedAnswer: {}",
+                    problemUuid, questionNumber, selectedAnswer);
+
+            // GradingService 사용하여 채점 처리
+            Map<String, Object> gradingResult = gradingService.submitAnswer(problemUuid, questionNumber, selectedAnswer, userUuid);
+
+            if (!(Boolean) gradingResult.get("success")) {
+                return ResponseEntity.ok(ApiResponse.error((String) gradingResult.get("error")));
+            }
+
+            // 채점 결과와 함께 다음 문제 이동 정보도 포함
+            Map<String, Object> completeResult = new HashMap<>(gradingResult);
+
+            try {
+                // 다음 문제로 자동 이동
+                Map<String, Object> moveResult = sessionService.moveToNextQuestion(problemUuid);
+                completeResult.put("nextQuestionInfo", moveResult);
+                completeResult.put("hasNextQuestion", !(Boolean) moveResult.get("isCompleted"));
+
+            } catch (Exception e) {
+                log.warn("다음 문제 이동 정보 가져오기 실패 (채점은 성공)", e);
+                completeResult.put("nextQuestionInfo", Map.of("error", "다음 문제 정보 조회 실패"));
+                completeResult.put("hasNextQuestion", false);
+            }
+
+            return ResponseEntity.ok(ApiResponse.success(completeResult, "답안이 제출되고 채점되었습니다."));
+
+        } catch (Exception e) {
+            log.error("답안 제출 실패 - problemUuid: {}", problemUuid, e);
+            return ResponseEntity.ok(ApiResponse.error("답안 제출 실패: " + e.getMessage()));
+        }
+    }
+
+    /**
+     * 다음 문제로 이동
+     */
+    @PostMapping("/problem/{problemUuid}/next")
+    public ResponseEntity<ApiResponse<Map<String, Object>>> nextQuestion(@PathVariable UUID problemUuid) {
+
+        try {
+            log.info("다음 문제 요청 - problemUuid: {}", problemUuid);
+
+            Map<String, Object> result = sessionService.moveToNextQuestion(problemUuid);
+
+            return ResponseEntity.ok(ApiResponse.success(result, "다음 문제로 이동했습니다."));
+
+        } catch (Exception e) {
+            log.error("다음 문제 이동 실패 - problemUuid: {}", problemUuid, e);
+            return ResponseEntity.ok(ApiResponse.error("다음 문제 이동 실패: " + e.getMessage()));
+        }
+    }
+
+    /**
+     * 이전 문제로 이동
+     */
+    @PostMapping("/problem/{problemUuid}/previous")
+    public ResponseEntity<ApiResponse<Map<String, Object>>> previousQuestion(@PathVariable UUID problemUuid) {
+
+        try {
+            log.info("이전 문제 요청 - problemUuid: {}", problemUuid);
+
+            Map<String, Object> result = sessionService.moveToPreviousQuestion(problemUuid);
+
+            return ResponseEntity.ok(ApiResponse.success(result, "이전 문제로 이동했습니다."));
+
+        } catch (Exception e) {
+            log.error("이전 문제 이동 실패 - problemUuid: {}", problemUuid, e);
+            return ResponseEntity.ok(ApiResponse.error("이전 문제 이동 실패: " + e.getMessage()));
+        }
+    }
+
+    /**
+     * 퀴즈 세션 완료 처리 - 채점 시스템 통합
+     */
+    @PostMapping("/problem/{problemUuid}/finish")
+    public ResponseEntity<ApiResponse<Map<String, Object>>> finishQuiz(
+            @PathVariable UUID problemUuid) {
+
+        try {
+            log.info("퀴즈 완료 처리 - problemUuid: {}", problemUuid);
+
+            // GradingService로 최종 채점 처리
+            Map<String, Object> gradingResult = gradingService.completeQuiz(problemUuid);
+
+            if (!(Boolean) gradingResult.get("success")) {
+                return ResponseEntity.ok(ApiResponse.error((String) gradingResult.get("error")));
+            }
+
+            // 기존 세션 완료 처리도 함께 실행
+            Map<String, Object> sessionResult = sessionService.completeSession(problemUuid);
+
+            // 결과 통합
+            Map<String, Object> completeResult = new HashMap<>();
+            completeResult.putAll(gradingResult); // 채점 결과
+            completeResult.put("sessionCompleted", sessionResult.get("success")); // 세션 완료 여부
+            completeResult.put("message", "퀴즈가 완료되고 결과가 저장되었습니다.");
+
+            return ResponseEntity.ok(ApiResponse.success(completeResult, "퀴즈가 완료되었습니다."));
+
+        } catch (Exception e) {
+            log.error("퀴즈 완료 처리 실패 - problemUuid: {}", problemUuid, e);
+            return ResponseEntity.ok(ApiResponse.error("퀴즈 완료 처리 실패: " + e.getMessage()));
+        }
+    }
+
+    /**
      * 생성된 문제 내용 조회
      */
     @GetMapping("/problem/{problemUuid}")
@@ -131,118 +268,94 @@ public class ProblemSessionController {
     }
 
     /**
-     * 세션의 현재 문제 조회
-     */
-    @GetMapping("/{sessionId}/current")
-    public ResponseEntity<ApiResponse<CurrentQuestionResponse>> getCurrentQuestion(
-            @PathVariable UUID sessionId) {
-
-        try {
-            log.info("현재 문제 조회 요청 - sessionId: {}", sessionId);
-
-            CurrentQuestionResponse response = sessionService.getCurrentQuestion(sessionId);
-
-            log.info("현재 문제 조회 성공 - questionId: {}", response.getQuestionId());
-
-            return ResponseEntity.ok(ApiResponse.success(response, "현재 문제를 성공적으로 가져왔습니다."));
-
-        } catch (Exception e) {
-            log.error("현재 문제 조회 실패 - sessionId: {}", sessionId, e);
-            return ResponseEntity.ok(ApiResponse.error("문제 조회 실패: " + e.getMessage()));
-        }
-    }
-
-    /**
      * 세션 상태 조회
      */
-    @GetMapping("/{sessionId}/status")
+    @GetMapping("/problem/{problemUuid}/status")
     public ResponseEntity<ApiResponse<SessionStatusResponse>> getSessionStatus(
-            @PathVariable UUID sessionId) {
+            @PathVariable UUID problemUuid) {
 
         try {
-            log.info("세션 상태 조회 요청 - sessionId: {}", sessionId);
+            log.info("세션 상태 조회 요청 - problemUuid: {}", problemUuid);
 
-            SessionStatusResponse response = sessionService.getSessionStatus(sessionId);
+            SessionStatusResponse response = sessionService.getSessionStatus(problemUuid);
 
             return ResponseEntity.ok(ApiResponse.success(response, "세션 상태를 성공적으로 가져왔습니다."));
 
         } catch (Exception e) {
-            log.error("세션 상태 조회 실패 - sessionId: {}", sessionId, e);
+            log.error("세션 상태 조회 실패 - problemUuid: {}", problemUuid, e);
             return ResponseEntity.ok(ApiResponse.error("세션 상태 조회 실패: " + e.getMessage()));
         }
     }
 
     /**
-     * 다음 문제로 이동
+     * 문제 세션 활성 상태 확인
      */
-    @PostMapping("/{sessionId}/next")
-    public ResponseEntity<ApiResponse<Map<String, Object>>> nextQuestion(
-            @PathVariable UUID sessionId) {
+    @GetMapping("/problem/{problemUuid}/active")
+    public ResponseEntity<ApiResponse<Map<String, Object>>> checkSessionActive(
+            @PathVariable UUID problemUuid) {
 
         try {
-            log.info("다음 문제 요청 - sessionId: {}", sessionId);
+            log.info("문제 세션 활성 상태 확인 - problemUuid: {}", problemUuid);
 
-            Map<String, Object> result = sessionService.moveToNextQuestion(sessionId);
+            boolean isActive = sessionService.isSessionActive(problemUuid);
 
-            return ResponseEntity.ok(ApiResponse.success(result, "다음 문제로 이동했습니다."));
+            Map<String, Object> result = Map.of(
+                    "problemUuid", problemUuid,
+                    "isActive", isActive,
+                    "status", isActive ? "ACTIVE" : "INACTIVE"
+            );
+
+            return ResponseEntity.ok(ApiResponse.success(result,
+                    "세션 활성 상태: " + (isActive ? "활성" : "비활성")));
 
         } catch (Exception e) {
-            log.error("다음 문제 이동 실패 - sessionId: {}", sessionId, e);
-            return ResponseEntity.ok(ApiResponse.error("다음 문제 이동 실패: " + e.getMessage()));
+            log.error("세션 활성 상태 확인 실패 - problemUuid: {}", problemUuid, e);
+            return ResponseEntity.ok(ApiResponse.error("활성 상태 확인 실패: " + e.getMessage()));
         }
     }
 
     /**
-     * 답안 제출 및 채점
+     * 채팅 세션의 모든 문제 세트 조회
      */
-    @PostMapping("/{sessionId}/submit")
-    public ResponseEntity<ApiResponse<Map<String, Object>>> submitAnswer(
-            @PathVariable UUID sessionId,
-            @RequestParam int questionNumber,
-            @RequestParam int selectedAnswer,
-            @RequestParam(required = false) UUID userId) {
+    @GetMapping("/chat-session/{chatSessionUuid}/problems")
+    public ResponseEntity<ApiResponse<List<Map<String, Object>>>> getProblemsForChatSession(
+            @PathVariable UUID chatSessionUuid) {
 
         try {
-            log.info("답안 제출 - sessionId: {}, questionNumber: {}, selectedAnswer: {}",
-                    sessionId, questionNumber, selectedAnswer);
+            log.info("채팅 세션의 문제 세트 조회 - chatSessionUuid: {}", chatSessionUuid);
 
-            Map<String, Object> result = Map.of(
-                    "success", true,
-                    "sessionId", sessionId.toString(),
-                    "questionNumber", questionNumber,
-                    "selectedAnswer", selectedAnswer,
-                    "message", "답안이 제출되었습니다. (채점 로직 구현 필요)"
-            );
+            List<Problem> problems = sessionService.getProblemsForChatSession(chatSessionUuid);
 
-            return ResponseEntity.ok(ApiResponse.success(result, "답안이 성공적으로 제출되었습니다."));
+            List<Map<String, Object>> problemSummaries = problems.stream()
+                    .map(problem -> sessionService.getProblemSummary(problem.getUuid()))
+                    .toList();
+
+            return ResponseEntity.ok(ApiResponse.success(problemSummaries,
+                    "채팅 세션의 문제 세트 목록을 조회했습니다."));
 
         } catch (Exception e) {
-            log.error("답안 제출 실패 - sessionId: {}", sessionId, e);
-            return ResponseEntity.ok(ApiResponse.error("답안 제출 실패: " + e.getMessage()));
+            log.error("채팅 세션의 문제 세트 조회 실패 - chatSessionUuid: {}", chatSessionUuid, e);
+            return ResponseEntity.ok(ApiResponse.error("문제 세트 조회 실패: " + e.getMessage()));
         }
     }
 
     /**
-     * 문제 세트 전체 조회
+     * 문제 세트 요약 정보 조회
      */
-    @GetMapping("/{sessionId}/all-questions")
-    public ResponseEntity<ApiResponse<Map<String, Object>>> getAllQuestions(
-            @PathVariable UUID sessionId) {
+    @GetMapping("/problem/{problemUuid}/summary")
+    public ResponseEntity<ApiResponse<Map<String, Object>>> getProblemSummary(
+            @PathVariable UUID problemUuid) {
 
         try {
-            log.info("전체 문제 조회 요청 - sessionId: {}", sessionId);
+            log.info("문제 세트 요약 정보 조회 - problemUuid: {}", problemUuid);
 
-            Map<String, Object> result = Map.of(
-                    "success", true,
-                    "sessionId", sessionId.toString(),
-                    "message", "전체 문제 조회 기능 구현 필요"
-            );
+            Map<String, Object> summary = sessionService.getProblemSummary(problemUuid);
 
-            return ResponseEntity.ok(ApiResponse.success(result));
+            return ResponseEntity.ok(ApiResponse.success(summary, "문제 세트 요약 정보를 조회했습니다."));
 
         } catch (Exception e) {
-            log.error("전체 문제 조회 실패 - sessionId: {}", sessionId, e);
-            return ResponseEntity.ok(ApiResponse.error("전체 문제 조회 실패: " + e.getMessage()));
+            log.error("문제 세트 요약 정보 조회 실패 - problemUuid: {}", problemUuid, e);
+            return ResponseEntity.ok(ApiResponse.error("요약 정보 조회 실패: " + e.getMessage()));
         }
     }
 
@@ -255,13 +368,15 @@ public class ProblemSessionController {
             Map<String, Object> status = Map.of(
                     "status", "정상",
                     "service", "AI 문제풀이 시스템",
-                    "features", Arrays.asList(
+                    "features", List.of(
                             "채팅 기반 AI 문제 생성",
                             "키워드 기반 문제 생성",
                             "실시간 문제 조회",
-                            "답안 제출 및 채점"
+                            "답안 제출 및 채점",
+                            "오답노트 자동 생성"
                     ),
-                    "aiModel", "OpenAI GPT-3.5-turbo"
+                    "aiModel", "OpenAI GPT-3.5-turbo",
+                    "apiStructure", "problemUuid 기반"
             );
 
             return ResponseEntity.ok(ApiResponse.success(status, "AI 문제풀이 시스템 정상 작동!"));
@@ -279,9 +394,8 @@ public class ProblemSessionController {
         try {
             log.info("OpenAI 연결 테스트 시작");
 
-            // 테스트용 UUID 생성
-            UUID testUserId = UUID.randomUUID();
-            UUID testSubjectId = UUID.randomUUID();
+            UUID testUserId = sessionService.createTestUserIfNotExists("openai-test@example.com");
+            UUID testSubjectId = sessionService.createTestSubjectIfNotExists(testUserId, "OpenAI테스트과목");
 
             Map<String, Object> result = problemGenerationService.generateProblemsFromKeywords(
                     testUserId, testSubjectId,
